KIK-1075, fix scroll issue on firefox

--- a/app/components/GlobalPMSModal/styles.less
+++ b/app/components/GlobalPMSModal/styles.less
@@ -8,6 +8,7 @@
 
         .modal-body{
           margin-top: -1px;
+          overflow: hidden;
           .holder{
             /*max-height: 64vh;*/
           }
